# racfenixERP

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  seed.py  styles.css
apps/customers/: apps.py  models.py  urls.py
apps/customers/migrations/: 0001_initial.py
apps/products/: admin.py  apps.py  models.py  urls.py
apps/products/migrations/: 0001_initial.py  0002_product_image_url_alter_product_sku.py
apps/purchases/: apps.py  models.py  urls.py
apps/sales/: apps.py  models.py  urls.py
apps/sales/migrations/: 0001_initial.py
apps/users/: admin.py  apps.py  forms.py  models.py
apps/users/migrations/: 0001_initial.py
core/: asgi.py  settings.py  urls.py  views.py  wsgi.py
core/settings/: base.py  local.py  production.py
logs/: .gitkeep
statics/css/: styles.css
templates/admin/: dashboard.html  index.html
